--- a/src/components/SideMenus.astro
+++ b/src/components/SideMenus.astro
@@ -9,7 +9,7 @@ const currentPath = pathname;
 ---
 
 <!-- loop through menus -->
-<nav class="h-[calc(100vh - 4rem)] self-start font-titillium  md:w-96 sticky top-[4rem]">
+<nav class="self-start font-titillium bg-base-100 h-full">
     <ul class="menu flex flex-col gap-1 pt-5 pr-4 h-full overflow-y-scroll flex-nowrap hide-scrollbar">
         {
             menus.map((menu) => (
