--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -3,7 +3,7 @@
 let { article } = Astro.props;
 ---
 
-<ul id="toc" class="menu sticky top-16 menu-sm self-start pt-5 md:w-96 flex-col gap-1 font-titillium lg:flex hidden">
+<ul id="toc" class="menu sticky top-16 menu-sm self-start pt-5 md:w-96 flex-col gap-1 lg:flex hidden font-titillium ">
     <li>
         <h3 class="font-bold text-lg menu-title">Daftar Isi</h3>
     </li>
