--- a/src/styles.css
+++ b/src/styles.css
@@ -44,3 +44,10 @@
     -ms-overflow-style: none !important;
     scrollbar-width: none !important;
 }
+.h-content{
+    height: calc(100vh - 4rem);
+}
+@media screen and (min-width: 768px){
+    
+    
+}
