--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -2,7 +2,7 @@
 // TableOfContents.astro
 let { article } = Astro.props;
 ---
-{  article.toc && article.toc.length > 0 && article.footnotes.length > 0 && 
+{  article.toc && article.toc.length > 0 && article.footnotes && article.footnotes.length > 0 && 
     <ul id="toc" class="menu sticky top-16 menu-sm self-start pt-5 md:w-96 flex-col gap-1 lg:flex hidden font-titillium ">
         <li>
             <h3 class="font-bold text-lg menu-title">Daftar Isi</h3>
