--- a/src/pages/dalil/[id].astro
+++ b/src/pages/dalil/[id].astro
@@ -35,12 +35,16 @@ const dalil = json.find((dalil) => dalil.id == id);
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{dalil.title}</title>
     <link rel="stylesheet" href="/styles.css" />
+    <script>
+        if (window.self !== window.top) {
+            document.documentElement.classList.add('in-iframe');
+        }
+    </script>
 </head>
 <body>
-    <id id="toasterContainer"></id>
     <main class="container mx-auto px-5">
-        <div class="flex flex-wrap gap-2 items-center py-4 border-b-2">
-            <a href="/dalil" class="btn btn-outline btn-xs w-fit">Back to Dalils</a>
+        <div id="header" class="flex flex-wrap gap-2 items-center py-4 border-b-2">
+            <a href="/dalil" class="hide-in-iframe btn btn-outline btn-xs w-fit">Back to Dalils</a>
             <h1 class="text-lg">{dalil.title}</h1>
             <div class="flex gap-1">
                 {
@@ -50,9 +54,13 @@ const dalil = json.find((dalil) => dalil.id == id);
                 }
             </div>
         </div>
-        <article class="grid md:grid-cols-2 gap-3 mt-4">
+        <article class="grid md:grid-cols-2 grid-cols-1 gap-3 mt-4">
             <div class=" md:order-2">
-                <img src=`${dalil.img}` alt=`${dalil.title}` />
+                {dalil.source_url && (
+                        <strong>Source URL:</strong>
+                        <Copyable class="text-sm italic">{dalil.source_url}</Copyable>
+                )}
+                <img src=`${dalil.img}` alt=`${dalil.title}` class="mt-3 w-full"/>
             </div>
             <div class="flex flex-col gap-2">
                 
